crates/compiler/tests/parse_errors/exposing_value.elm
module Main exposing (5)
x = 1
